Feature: Player can play and pause clicking the button - add some extra style

--- a/src/components/PlayerPage/PlayerScreen/style.sass
+++ b/src/components/PlayerPage/PlayerScreen/style.sass
@@ -2,6 +2,11 @@
   width: 100%
   position: relative
   -webkit-box-shadow: 11px 11px 53px -6px rgba(0,0,0,0.75)
+
 .player_screen
+  opacity: 1
+  transition: opacity 1s ease-in 
   width: 100%
-  
+
+.player_screen__wrapper--loading
+  opacity: 0
