--- a/src/components/PlayerPage/PlayButton/style.sass
+++ b/src/components/PlayerPage/PlayButton/style.sass
@@ -9,7 +9,7 @@ $opacityActive: 0.5
 .button
   width: 100%
   opacity: 0
-  transition: opacity 0.5s ease
+  transition: opacity 0.5s ease 0.5s
   filter: invert(100%)
   cursor: pointer
 
