--- a/src/components/PlayerPage/Screen/style.sass
+++ b/src/components/PlayerPage/Screen/style.sass
@@ -2,6 +2,8 @@
   width: 100%
   position: relative
   -webkit-box-shadow: 11px 11px 53px -6px rgba(0,0,0,0.75)
+  overflow: hidden
+  
 
 .player_screen
   opacity: 1
@@ -10,3 +12,17 @@
 
 .player_screen__wrapper--loading
   opacity: 0
+
+.controls
+  display: flex
+  position: absolute
+  bottom: 0
+  width: 100%
+  background: linear-gradient(0deg, #000 10%, #555 100%)
+  opacity: 0.6
+  height: 50px
+  transform: translateY(40px)
+  transition: 0.5s ease 0.1s
+
+.player_screen__wrapper:hover .controls
+  transform: translateY(0)
