add bookmarks and click events

--- a/src/components/TimeLine/style.sass
+++ b/src/components/TimeLine/style.sass
@@ -1,10 +1,9 @@
 .time-line
   height: 7px
   top: 0
-  left: 0
   width: 100%
   background: #000
-  cursor: pointer
+  // cursor: pointer
 
 .time-line--stroke
   min-width: 10px
