--- a/src/components/PlayerPage/Screen/style.sass
+++ b/src/components/PlayerPage/Screen/style.sass
@@ -3,6 +3,7 @@
   position: relative
   -webkit-box-shadow: 11px 11px 53px -6px rgba(0,0,0,0.75)
   overflow: hidden
+  border: 5px solid #000
   
 
 .player_screen
