--- a/src/components/PlayerBody/Screen/style.sass
+++ b/src/components/PlayerBody/Screen/style.sass
@@ -4,12 +4,16 @@
   -webkit-box-shadow: 11px 11px 53px -6px rgba(0,0,0,0.75)
   overflow: hidden
   border: 5px solid #000
+  position: relative
+  z-index: 5
   
 
 .player_screen
   opacity: 1
   transition: opacity 1s ease-in 
   width: 100%
+  position: relative
+
 
 .player_screen__wrapper--loading
   opacity: 0
