style fix and add the promt to add custom link

--- a/src/components/CardPreview/CardItem/style.sass
+++ b/src/components/CardPreview/CardItem/style.sass
@@ -2,9 +2,11 @@
   position: absolute
   flex: 1 0 100px
   background: white
-  padding: 20px
+  padding: 10px
   bottom: 20px
-  border-radius: 15px
+  border-top-right-radius: 10px
+  border-top-left-radius: 10px
+  border-bottom-right-radius: 10px
   opacity: 0
   visibility: hidden
   transition: 0.3s ease-out
