--- a/src/components/Video/style.sass
+++ b/src/components/Video/style.sass
@@ -1,2 +1,10 @@
 .video--hidden
   display: none
+.video--fade-out
+  opacity: 0
+.video__player
+  background: #000
+  opacity: 1
+  transition: opacity 10ms
+  width: 100%
+  position: relative
