--- a/src/components/PlayerBody/Screen/style.sass
+++ b/src/components/PlayerBody/Screen/style.sass
@@ -3,7 +3,7 @@
   position: relative
   -webkit-box-shadow: 11px 11px 53px -6px rgba(0,0,0,0.75)
   overflow: hidden
-  border: 5px solid #000
+  // border: 1.5px solid #000
   position: relative
   z-index: 5
   background: #000
@@ -27,7 +27,7 @@
   background: linear-gradient(0deg, #000 10%, #555 100%)
   opacity: 0.8
   height: 50px
-  transform: translateY(40px)
+  transform: translateY(44px)
   transition: 0.5s ease 0.1s
 
 .player_screen__wrapper:hover .controls
